Source/WebCore/inspector/agents/InspectorDOMAgent.h
@@ -230,7 +230,6 @@ private:
 
     // Node-related methods.
     Inspector::Protocol::DOM::NodeId bind(Node&);
-    void unbind(Node&);
 
     Node* assertEditableNode(Inspector::Protocol::ErrorString&, Inspector::Protocol::DOM::NodeId);
     Element* assertEditableElement(Inspector::Protocol::ErrorString&, Inspector::Protocol::DOM::NodeId);
@@ -277,8 +276,7 @@ private:
     std::unique_ptr<DOMEditor> m_domEditor;
     WeakHashMap<RenderObject, Vector<size_t>> m_flexibleBoxRendererCachedItemsAtStartOfLine;
 
-    Vector<Inspector::Protocol::DOM::NodeId> m_destroyedDetachedNodeIdentifiers;
-    Vector<std::pair<Inspector::Protocol::DOM::NodeId, Inspector::Protocol::DOM::NodeId>> m_destroyedAttachedNodeIdentifiers;
+    Vector<Inspector::Protocol::DOM::NodeId> m_destroyedNodeIdentifiers;
     Timer m_destroyedNodesTimer;
 
 #if ENABLE(VIDEO)
